--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "dj-database-url>=2.1.0",
     "django-cors-headers>=4.3.0",
     "djangorestframework>=3.14.0",
+    "django-unfold>=0.1.0",
 ]
 
 [project.optional-dependencies]
