--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "django-unfold>=0.1.0",
     "pydantic>=2.0.0",
     "modal>=1.1.0",
-    "python-jose[cryptography]]>=3.3.0",
+    "python-jose[cryptography]>=3.3.0",
     "workos>=5.0.0",
     "django-ninja>=1.0.0",
 ]
