--- a/deepmd_ai_services/deepmd_workbench/pyproject.toml
+++ b/deepmd_ai_services/deepmd_workbench/pyproject.toml
@@ -8,8 +8,8 @@ version = "0.1.0"
 description = "DeepMD Workbench - AI services for molecular dynamics"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi[standard]>=0.104.1",
-    "uvicorn[standard]>=0.24.0",
+    "fastapi>=0.116.0",
+    "uvicorn>=0.30.0",
     "google-adk>=1.1.0",
     "fastmcp>=2.10.0",
     "modal>=1.1.0",
